# cerritos

./: .gitignore  BUILDING  CMakeLists.txt  LICENSE  README.md  TODO  conanfile.py  conanfile.txt
cmake/: sdl.cmake
crosscompile/: linux_to_windows.sh  wine.md
docs/: Doxyfile.in  gettingstarted.md  pathhandling.md
docs/templates/: cerritos.css  footer.html  header.html
examples/: CMakeLists.txt  dadsteroids.cmake  dasteroids.cpp  drumTest.cmake  drumTest.cpp  eventTest.cmake  eventTest.cpp  fontTest.cmake  fontTest.cpp  hello.cmake  hello.cpp  pathTest.cmake  pathTest.cpp  showfont.cmake  spriteTest.cmake  spriteTest.cpp
scripts/: SDLeventTypes  factorSDL.py  generateEventHeaders.py  generateSDLHeaders.py
src/: CMakeLists.txt  cerritos.cpp  cerritos.h  cerritos_version.h.in  cerritosbase.h
src/backend/: backend.h  sdl_backend.cpp  sdl_backend.h  sdl_poll_hardware_events.cpp
src/core/: animate.cpp  animate.h  application.cpp  application.h  circle.cpp  circle.h  clock.cpp  clock.h  collide.cpp  collide.h  core.h  event.cpp  event.h  font.cpp  font.h  imagemanager.cpp  imagemanager.h  list.h  macros.h  map.cpp  map.h  object.cpp  object.h  path.cpp  path.h  platform.h  point.cpp  point.h  pointtemplate.cpp  pointtemplate.h  rect.cpp  rect.h  sound.cpp  sound.h  sprite.cpp  sprite.h  string.h  surface.cpp  surface.h  types.h  (+2 more)
src/core/events/: audiodeviceaddedevent.h  audiodeviceremovedevent.h  clipboardupdateevent.h  controlleraxismotionevent.h  controllerbuttondownevent.h  controllerbuttonupevent.h  controllerdeviceaddedevent.h  controllerdeviceremappedevent.h  controllerdeviceremovedevent.h  dollargestureevent.h  dollarrecordevent.h  dropbeginevent.h  dropcompleteevent.h  dropfileevent.h  droptextevent.h  eventreceiver.cpp  eventreceiver.h  fingerdownevent.h  fingermotionevent.h  fingerupevent.h  hardwareeventprocessor.h  hardwareevents.h  joyaxismotionevent.h  joyballmotionevent.h  joybuttondownevent.h  joybuttonupevent.h  joydeviceaddedevent.h  joydeviceremovedevent.h  joyhatmotionevent.h  keydownevent.h  keymapchangedevent.h  keyupevent.h  mousebuttondownevent.h  mousebuttonupevent.h  mousemotionevent.h  mouseoverevent.h  mousewheelevent.h  multigestureevent.h  quitevent.cpp  quitevent.h  (+23 more)
src/core/events/hardware/: audiodeviceaddedevent.h  audiodeviceremovedevent.h  clipboardupdateevent.h  controlleraxismotionevent.h  controllerbuttondownevent.h  controllerbuttonupevent.h  controllerdeviceaddedevent.h  controllerdeviceremappedevent.h  controllerdeviceremovedevent.h  dollargestureevent.h  dollarrecordevent.h  dropbeginevent.h  dropcompleteevent.h  dropfileevent.h  droptextevent.h  fingerdownevent.h  fingermotionevent.h  fingerupevent.h  hardwareeventprocessor.h  hardwareeventreceiver.h  hardwareevents.h  joyaxismotionevent.h  joyballmotionevent.h  joybuttondownevent.h  joybuttonupevent.h  joydeviceaddedevent.h  joydeviceremovedevent.h  joyhatmotionevent.h  keydownevent.h  keymapchangedevent.h  keyupevent.h  mousebuttondownevent.h  mousebuttonupevent.h  mousemotionevent.h  mousewheelevent.h  multigestureevent.h  quitevent.h  renderdeviceresetevent.h  rendertargetsresetevent.h  sdl_hardwareventEnum.h  (+18 more)
src/exceptions/: exception.h
src/widgets/: allwidgets.h  layout.cpp  layout.h  mainwindow.cpp  mainwindow.h  widget.cpp  widget.h
templates/: header.h  src.cpp
